Fix navbar spacing

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -14,5 +14,8 @@
 .navbar-chicken .nav-item .nav-link {
   color: $white;
   font-weight: 400;
+}
 
+.navbar-chicken .nav-item {
+  margin-left: 1em;
 }
